--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -66,7 +66,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
-                        android:textColor="@color/colorTextMuted"
+                        android:textColor="@color/colorAccent"
                         android:text="2018-01-01"
                         tools:ignore="HardcodedText" />
 
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:text="{...}"
             android:typeface="monospace"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorContent"
             android:textSize="14sp"
             android:lineSpacingExtra="4dp"
             android:textIsSelectable="true"
